# Railway

./: CMakeLists.txt  CalcolatoreTreniv2.xlsx  Executions examples.txt  README.md  Railway.cpp  Railway.h  Station.cpp  Train.cpp  Trains.cpp  line_description.txt  line_description_1.txt  mainRailway.cpp  priorità.txt  timetables.txt  timetables_1.txt  timetables_2.txt  timetables_3.txt
